--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <body>
     <div class="container">
       <div class="hero-image">
-        <img src="./assets/images/illustration-hero.svg" alt="front image" />
+        <img
+          class="front-image"
+          src="./assets/images/illustration-hero.svg"
+          alt="front image" />
       </div>
       <div class="content">
         <h2 class="title">Order Summary</h2>
